5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1633_2927.log
== TEST (2019-04-02 18:20:13) 
-- CODE:
#suco valor
input(s=3,00) 
-- ERROR:
File "XXXX", line 2
    input(s=3,00) 
             ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:56) 
-- CODE:
#suco valor
print input(s=3,00)
#esfirra valor


-- ERROR:
File "XXXX", line 2
    print input(s=3,00)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:55) 
-- CODE:
#valor do suco
x=3,00
#valor das esfirras
x=1,50


-- ERROR:
File "XXXX", line 2
    print input(s=3,00)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:28:06) 
-- CODE:
#valor do suco
x=3,00
#valor das esfirras
x=1,50


-- EXECUTION TIME:
0.211336
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:59) 
-- CODE:
suco=3,00
-- ERROR:
File "XXXX", line 2
    print input(s=3,00)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:14) 
-- CODE:
x=3,00+1,50
-- ERROR:
File "XXXX", line 2
    print input(s=3,00)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:06) 
-- CODE:
A=3,00
b=x
c=1,50
#valor total

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:21) 
-- CODE:

A=3,00
c=1,50


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:42) 
-- CODE:

A=3,00
c=1,50


-- EXECUTION TIME:
0.156941
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:43:36) 
-- CODE:
#preco do suco
input a=3,00
#preco da esfirra

-- ERROR:
File "XXXX", line 2
    input a=3,00
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:17) 
-- CODE:
#preco do suco
a=3,00
#preco da esfirra
b=1,50
#total
t=

-- ERROR:
File "XXXX", line 6
    t=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:24) 
-- CODE:
#preco do suco
a=3,00
#preco da esfirra
b=1,50
-- ERROR:
File "XXXX", line 6
    t=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:44:27) 
-- CODE:
#preco do suco
a=3,00
#preco da esfirra
b=1,50
-- EXECUTION TIME:
0.130466
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:16) 
-- CODE:
sp=3,00
ps=1,50
-- ERROR:
File "XXXX", line 6
    t=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:54) 
-- CODE:
s=3,00
esfirra=1,50
#valor total

-- EXECUTION TIME:
0.126685
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:56) 
-- CODE:
s=3,00
esfirra=1,50
#valor total

-- ERROR:
File "XXXX", line 6
    t=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:33) 
-- CODE:
s=3,00
e=1,50
r=3,50
#valor total

-- EXECUTION TIME:
0.168862
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:35) 
-- CODE:
s=3,00
e=1,50
r=3,50
#valor total

-- ERROR:
File "XXXX", line 6
    t=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:23) 
-- CODE:
s=3,00
r=3,5


-- EXECUTION TIME:
0.21162
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
